force-app/main/default/objects/IncidentNotification__c/IncidentNotification__c.object-meta.xml
<CustomObject>
    <label>Incident Notification</label>
    <nameField>
        <label>IncidentNotification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incident Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>