force-app/main/default/objects/IncidentNotification__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Incident Notifications</relationshipLabel>
    <relationshipName>Incident_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>