force-app/main/default/objects/IncidentNotification__c/fields/MobileNumber__c.field-meta.xml
<CustomField>
    <fullName>MobileNumber__c</fullName>
    <label>MobileNumber</label>
    <type>Phone</type>
</CustomField>