force-app/main/default/objects/IncidentNotification__c/fields/NotificationUser__c.field-meta.xml
<CustomField>
    <fullName>NotificationUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Incident_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>