force-app/main/default/objects/IncidentNotification__c/fields/RecipientContact__c.field-meta.xml
<CustomField>
    <fullName>RecipientContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Notifications</relationshipLabel>
    <relationshipName>Incident_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>